Calculadora de IMC completa

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
     </main>
 
 
-    <script type="text/javascript" src="arquivos/script.js"></script>
+    <script type="text/javascript" src="arquivos/js/script.js"></script>
     
 </body>
 </html>
+
